fixing bug in optimization

--- a/notebooks/Tutorial.ipynb
+++ b/notebooks/Tutorial.ipynb
@@ -587,13 +587,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "350cb7fb-1945-4811-8150-92178eb5946e",
+   "cell_type": "markdown",
+   "id": "e0997c15-9577-4c53-8851-1c8849b455f7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### digits with lowest probability"
+    "### Digits with lowest probability"
    ]
   },
   {
