start updatin README

--- a/notebooks/ArchitectureOptimization.ipynb
+++ b/notebooks/ArchitectureOptimization.ipynb
@@ -177,34 +177,27 @@
     "        else:\n",
     "            scale_facs.append(1)\n",
     "        current_size = current_size//scale_facs[ii]\n",
-    "        dropout_rate.append(trial.suggest_float('dropout_rate_%d'%ii,1e-3,1,log=True))\n",
-    "        # if current_size<=latent_dim:\n",
-    "        #     n_layers=ii\n",
-    "        #     break\n",
-    "            \n",
+    "        #dropout_rate.append(trial.suggest_float('dropout_rate_%d'%ii,1e-3,1,log=True))\n",
     "\n",
     "    \n",
     "    general_params      = {'input_c': input_c, 'input_dim': input_dim, 'latent_dim': latent_dim, 'encoder_type': encoder_type, 'decoder_type': decoder_type, 'dim': dim}\n",
     "    conv_network_params = {'n_layers': n_layers, 'out_channels': out_channels, 'kernel_sizes': kernel_sizes, 'scale_facs': scale_facs, 'paddings': paddings,\\\n",
-    "                       'strides': strides,'activations': activations, 'spec_norm': spec_norm, 'dropout_rate':dropout_rate, 'layer_norm': layer_norm,\\\n",
+    "                       'strides': strides,'activations': activations, 'spec_norm': spec_norm, 'layer_norm': layer_norm,\\\n",
     "                       'affine': affine,'final_sigmoid': final_sigmoid, 'bias':bias}\n",
     "\n",
     "    training_params     = {'batchsize': batchsize, 'initial_lr': initial_lr, 'optimizer': optimizer, 'criterion': criterion, \\\n",
     "                       'scheduler': scheduler, 'scheduler_params':scheduler_params}\n",
     "    data_params         = {'dataset':dataset, 'loc': loc}\n",
     "    \n",
-    "    try:\n",
-    "        AE1                 = AE.Autoencoder(general_params,data_params,conv_network_params, conv_network_params, training_params, device)\n",
-    "    \n",
-    "        if dim =='1D':\n",
-    "            summary(AE1, (input_c,input_dim))\n",
-    "        else:\n",
-    "            summary(AE1, (input_c, input_dim, input_dim))\n",
+    "    AE1                 = AE.Autoencoder(general_params,data_params,conv_network_params, conv_network_params, training_params, device)\n",
     "\n",
-    "        train_loss, valid_loss = AE1.train(nepochs)\n",
+    "    if dim =='1D':\n",
+    "        summary(AE1, (input_c,input_dim))\n",
+    "    else:\n",
+    "        summary(AE1, (input_c, input_dim, input_dim))\n",
+    "\n",
+    "    train_loss, valid_loss = AE1.train(nepochs)\n",
     "        \n",
-    "    except:\n",
-    "        valid_loss = [100]\n",
     "    \n",
     "    return valid_loss[-1]"
    ]
