cnn without weiht norm

--- a/notebooks/Tutorial.ipynb
+++ b/notebooks/Tutorial.ipynb
@@ -113,7 +113,7 @@
     "# scaling factor in max pooling layer \n",
     "scale_facs   = [1,1,1] \n",
     "# padding values in each conv layer\n",
-    "paddings     = [5,2,5]\n",
+    "paddings     = [5,2,5] #TODO: add suport for 'VALID' and 'SAME'\n",
     "# stride values in each conv layer\n",
     "strides      = [2,1,1]\n",
     "# whether tp apply a layer normalization after conv layer\n",
