added comment on chi2

--- a/notebooks/SDSS.ipynb
+++ b/notebooks/SDSS.ipynb
@@ -607,10 +607,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce475821-a598-40b2-850f-3d4e3c05efc9",
+   "id": "090a2d7e-e209-49ca-84c1-5dbc825db1c8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Test statistic for chi2 test: (input-recon)^2/noise_var\n",
+    "T=(y_true['features'].to(device).float()-y_pred)**2*y_true['noise'].to(device).float()*y_true['mask'].to(device).float()\n",
+    "### T has size batch_size*data_dim\n",
+    "### flatten T and look at distribution of values in T\n",
+    "### does it have mean 1? Does it look chi2-ish? https://en.wikipedia.org/wiki/Chi-squared_distribution"
+   ]
   },
   {
    "cell_type": "code",
