--- a/notebooks/SDSS.ipynb
+++ b/notebooks/SDSS.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "57627e3d-f9b1-4b56-b835-b207442b9e68",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "f85a4793-bb5e-4c4a-949f-73d44977f092",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "29c0269c-d6b5-4d72-835e-b9c5ab0cab03",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "706abcb9-97ed-4051-a9e8-48cf2443833f",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "ad9d1c51-9275-4e4e-880c-d07f72d4df51",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cuda:0\n"
+      "cpu\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "6128cc78-f5b0-429f-a30f-ad1ecdccd358",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "861e682f-cde3-4571-91fa-658b8fb37952",
    "metadata": {},
    "outputs": [],
@@ -192,6 +192,46 @@
     "training_params     = {'batchsize': batchsize, 'batchsize_valid': batchsize_valid, 'initial_lr': initial_lr, 'optimizer': optimizer, 'criterion1': criterion1, 'criterion2': criterion2,\n",
     "                       'scheduler': scheduler, 'scheduler_params':scheduler_params, 'ann_epoch': ann_epoch}\n",
     "data_params         = {'dataset':dataset, 'loc': loc}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0d87bc0e-b998-41f3-a5a0-c590913a6a1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9ed84f68-ba06-41d1-b597-5976447b2dd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(fc_network_params, open('/global/u2/v/vboehm/codes/Spectra_PAE/params/fc_network_params.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bb11af10-00bc-4ca5-95bc-741f0c9081fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(training_params, open('/global/u2/v/vboehm/codes/Spectra_PAE/params/training_params.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae15dca6-4017-4ce7-a526-5c34378f624b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(training_params, open('/global/u2/v/vboehm/codes/Spectra_PAE/params/training_params.pkl','wb'))"
    ]
   },
   {
@@ -221,6 +261,35 @@
    "outputs": [],
    "source": [
     "AE1 = AE.Autoencoder(general_params,data_params,fc_network_params, fc_network_params, training_params, device, transforms=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "435eb445-b44d-4e50-9dca-6cdae53037dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'batchsize': 32,\n",
+       " 'batchsize_valid': 512,\n",
+       " 'initial_lr': 0.001,\n",
+       " 'optimizer': 'Adam',\n",
+       " 'criterion1': 'masked_chi2',\n",
+       " 'criterion2': 'masked_chi2',\n",
+       " 'scheduler': 'ExponentialLR',\n",
+       " 'scheduler_params': {'gamma': 0.99},\n",
+       " 'ann_epoch': 0}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_params"
    ]
   },
   {
@@ -677,7 +746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
